# RustyRcs

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/everfrost/rusty/rcs/client/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libs/arm64-v8a/rust_rcs/include/: librust_rcs_client.h  librust_rcs_core.h  librust_rcs_core_ffi_android.h
app/src/main/cpp/libs/armeabi-v7a/rust_rcs/include/: librust_rcs_core.h
app/src/main/cpp/libs/armeabi-v7a/rust_rcs/lib/: .gitignore
app/src/main/java/com/everfrost/rusty/rcs/client/: ApplicationEnvironment.java  MainActivity.java  RustyRcsApplication.java  RustyRcsClient.java  SmsReceiver.java
app/src/main/java/com/everfrost/rusty/rcs/client/model/: ChatbotSearchResultJson.java
app/src/main/java/com/everfrost/rusty/rcs/client/utils/: SubscriptionManagerCompat.java
app/src/main/java/com/everfrost/rusty/rcs/client/utils/log/: ILogger.java  LogService.java  Logger.java  LoggerHolder.java
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_video.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: .gitignore  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
app/src/test/java/com/everfrost/rusty/rcs/client/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
